package assignment.gui;
public interface Button {
    void paint();
}