package assignment.gui;
public interface Checkbox {
    void paint();
}