package assignment.gui;

public interface GUIFactory {
    Button createButton();
    Checkbox createCheckbox();
}